# generative_agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
environment/frontend_server/: db.sqlite3  requirements.txt
environment/frontend_server/frontend_server/: urls.py  wsgi.py
environment/frontend_server/frontend_server/settings/: base.py  local.py
environment/frontend_server/templates/: base.html
environment/frontend_server/templates/demo/: demo.html  main_script.html
environment/frontend_server/templates/home/: error_start_backend.html  home.html  main_script.html
environment/frontend_server/templates/landing/: landing.html
environment/frontend_server/templates/path_tester/: main_script.html
environment/frontend_server/templates/persona_state/: persona_state.html
environment/frontend_server/translator/: views.py
reverie/backend_server/: _run_bg.py  benchmark.py  reverie.py
reverie/backend_server/persona/: persona.py
reverie/backend_server/persona/cognitive_modules/: perceive.py  plan.py  reflect.py
reverie/backend_server/persona/prompt_template/: gpt_structure.py  run_gpt_prompt.py
reverie/backend_server/persona/prompt_template/v2/: generate_hourly_schedule_batch_v1.txt
tests/: conftest.py  test_associative_memory.py  test_converse_agent_chat.py  test_execute.py  test_global_methods.py  test_path_finder.py  test_perceive.py  test_persona_move.py  test_plan_chat_react.py  test_plan_choose_retrieved.py  test_plan_control_flow.py  test_plan_hourly_schedule.py  test_plan_should_react.py  test_plan_wait_react.py  test_reflect_full.py  test_reflect_triggers.py  test_retrieve_pure.py  test_scratch.py  test_spatial_memory.py
tests/fixtures/: scratch_minimal.json  spatial_memory_minimal.json
