[project]
name = "generative-agents"
version = "0.1.0"
description = "Generative Agents: Interactive Simulacra of Human Behavior"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"

dependencies = [
    "Django>=4.2.8,<5.0",
    "django-cors-headers>=4.0,<5.0",
    "django-storages>=1.14,<2.0",
    "numpy>=1.26,<2.0",
    "openai>=0.27.0,<1.0",
    "python-dotenv>=1.2.1",
    "selenium>=4.8,<5.0",
]

[project.optional-dependencies]
analysis = [
    "gensim>=4.3.3,<5.0",
    "nltk>=3.6,<4.0",
    "scipy>=1.11,<2.0",
    "scikit-learn>=1.3,<2.0",
    "matplotlib>=3.8,<4.0",
    "pandas>=2.0,<3.0",
    "seaborn>=0.12,<1.0",
    "statsmodels>=0.14,<1.0",
    "yellowbrick>=1.5,<2.0",
    "scikit-posthocs>=0.7,<1.0",
    "trueskill>=0.4,<1.0",
]
test = [
    "pytest>=7.4,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.uv]
# アプリケーションプロジェクト（ライブラリではない）のため、自身のビルド・インストールは不要
package = false
